@@ -8,6 +8,8 @@
 	* bin/cygbuild.sh (CygbuildCmdConfMain): Adjust message.
 	(CygbuildCmdInstallList): Add mkdir support.
 	(CygbuildConfCC): rm config.cache
+	(CygbuildInstallExtraMimeFile): Use $INSTALL_FILE_MODES.
+	(CygbuildInstallExtraDirsFile): New.
 
 	* bin/template/test.sh.ex: (Run): Accept empty message.
 
